--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my blogs</title>
     <link rel="stylesheet" href="styles/blog.css">
+    <style>
+        td, th {
+        border: 2px solid black;
+        padding: 5px 10px;
+        font-weight: bold;
+    }
+    table{
+        border-collapse: collapse;
+    }
+    li{
+        font-weight: bold;
+    }
+   
+    </style>
+    
 </head>
 <body>
     </html>
@@ -114,6 +129,65 @@
             </form>
         </section>
     </main>
+    <h3>Making a table</h3>
+    <table>
+        <caption><b>Employee Salary Table</b></caption>
+       <thead>
+        <tr>
+            <th>no.</th>
+            <th>Name</th>
+            <th>Company</th>
+            <th>Salar</th>
+
+        </tr>
+
+      </thead>
+      <tbody>
+        <tr>
+            <td>1</td>
+            <td>Bill gates</td>
+            <td>Microsoft</td>
+            <td>$1000</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Steve jobs</td>
+            <td>Apple</td>
+            <td>$1200</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Larry page</td>
+            <td>Google</td>
+            <td>1100</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Mark joker</td>
+            <td>Facebook</td>
+            <td>$1300</td>
+        </tr>
+
+      </tbody>
+      <tfoot>
+        <tr>
+            <td colspan="4">
+                Total employee:4
+            </td>
+        </tr>
+
+      </tfoot>
+
+    </table>
+    <ol>
+        <li>Table:table</li>
+        <li>Table head: thead</li>
+        <li>table body:tbody</li>
+        <li>talble footer:tfoot</li>
+        <li>table row:tr</li>
+        <li>table data or table cell:td</li>
+        <li>table header set th</li>
+    </ol>
 
 </body>
 </html>
