added some info

--- a/table.html
+++ b/table.html
@@ -77,7 +77,8 @@
         <li>talble footer:tfoot</li>
         <li>table row:tr</li>
         <li>table data or table cell:td</li>
-        <li>table header set th</li>
+        <li>table header cell th</li>
+        <li>caption</li>
     </ol>
 </body>
 </html>
