--- a/table.html
+++ b/table.html
@@ -1,84 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creating a <table></table></title>
+    <title>Creating a <table></table>
+    </title>
+    <link rel="stylesheet" href="styles/nav.css">
     <style>
-        td, th {
+        td,
+        th {
             border: 2px solid black;
             padding: 5px 10px;
             font-weight: bold;
         }
-        table{
+
+        table {
             border-collapse: collapse;
         }
-        li{
+
+        li {
             font-weight: bold;
         }
-       
     </style>
 </head>
+
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="next.html">Next project</a></li>
+                <li><a href="index.html">index</a></li>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
     <h3>Making a table</h3>
-    <table>
-        <caption><b>Employee Salary Table</b></caption>
-       <thead>
-        <tr>
-            <th>no.</th>
-            <th>Name</th>
-            <th>Company</th>
-            <th>Salar</th>
+    <main>
+        <table>
+            <caption><b>Employee Salary Table</b></caption>
+            <thead>
+                <tr>
+                    <th>no.</th>
+                    <th>Name</th>
+                    <th>Company</th>
+                    <th>Salar</th>
 
-        </tr>
+                </tr>
 
-      </thead>
-      <tbody>
-        <tr>
-            <td>1</td>
-            <td>Bill gates</td>
-            <td>Microsoft</td>
-            <td>$1000</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Steve jobs</td>
-            <td>Apple</td>
-            <td>$1200</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Larry page</td>
-            <td>Google</td>
-            <td>1100</td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>Mark joker</td>
-            <td>Facebook</td>
-            <td>$1300</td>
-        </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Bill gates</td>
+                    <td>Microsoft</td>
+                    <td>$1000</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Steve jobs</td>
+                    <td>Apple</td>
+                    <td>$1200</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Larry page</td>
+                    <td>Google</td>
+                    <td>1100</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Mark joker</td>
+                    <td>Facebook</td>
+                    <td>$1300</td>
+                </tr>
 
-      </tbody>
-      <tfoot>
-        <tr>
-            <td colspan="4">
-                Total employee:4
-            </td>
-        </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="4">
+                        Total employee:4
+                    </td>
+                </tr>
 
-      </tfoot>
+            </tfoot>
 
-    </table>
-    <ol>
-        <li>Table:table</li>
-        <li>Table head: thead</li>
-        <li>table body:tbody</li>
-        <li>talble footer:tfoot</li>
-        <li>table row:tr</li>
-        <li>table data or table cell:td</li>
-        <li>table header cell th</li>
-        <li>caption</li>
-    </ol>
+        </table>
+        <ol>
+            <li>Table:table</li>
+            <li>Table head: thead</li>
+            <li>table body:tbody</li>
+            <li>talble footer:tfoot</li>
+            <li>table row:tr</li>
+            <li>table data or table cell:td</li>
+            <li>table header cell th</li>
+            <li>caption</li>
+        </ol>
+    </main>
+
 </body>
+
 </html>
